--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -45,10 +45,11 @@ platform="Windows Desktop"
 runnable=true
 dedicated_server=false
 custom_features=""
-export_filter="all_resources"
+export_filter="exclude"
+export_files=PackedStringArray()
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../../Chess.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -58,7 +59,7 @@ encrypt_directory=false
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_wrapper=0
 binary_format/embed_pck=false
 texture_format/bptc=true
 texture_format/s3tc=true
@@ -99,7 +100,7 @@ Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorActi
 ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debug -ErrorAction:SilentlyContinue
 Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
 Remove-Item -Recurse -Force '{temp_dir}'"
-dotnet/include_scripts_content=false
+dotnet/include_scripts_content=true
 dotnet/include_debug_symbols=true
 
 [preset.2]
@@ -112,7 +113,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../../Chess.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
