--- a/ChessAI/ChessAI.csproj
+++ b/ChessAI/ChessAI.csproj
@@ -1,11 +1,13 @@
-<Project Sdk="Godot.NET.Sdk/4.1.3">
+<Project Sdk="Microsoft.NET.Sdk">
+
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+
     <ItemGroup>
-      <ProjectReference Include="..\ChessAI\ChessAI.csproj" />
       <ProjectReference Include="..\Chess\Chess.csproj" />
     </ItemGroup>
+
 </Project>
