--- a/Chess.UI/Chess.UI.csproj
+++ b/Chess.UI/Chess.UI.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Godot.NET.Sdk/4.1.3">
-    <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-    </PropertyGroup>
-    <ItemGroup>
-      <ProjectReference Include="..\ChessAI\ChessAI.csproj" />
-      <ProjectReference Include="..\Chess\Chess.csproj" />
-    </ItemGroup>
+  <PropertyGroup>
+    <TargetFramework>net6.0</TargetFramework>
+    <EnableDynamicLoading>true</EnableDynamicLoading>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ChessAI\ChessAI.csproj" />
+    <ProjectReference Include="..\Chess\Chess.csproj" />
+  </ItemGroup>
 </Project>
