it's possible now to play agains black AI

--- a/Chess.UI/Chess.UI.csproj
+++ b/Chess.UI/Chess.UI.csproj
@@ -6,5 +6,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Chess\Chess.csproj" />
+      <ProjectReference Include="..\ChessAI\ChessAI.csproj" />
+
     </ItemGroup>
 </Project>
