--- a/Chess/Chess.csproj
+++ b/Chess/Chess.csproj
@@ -1,6 +1,7 @@
-<Project Sdk="Godot.NET.Sdk/4.1.3">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <EnableDynamicLoading>true</EnableDynamicLoading>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 </Project>
